@@ -1,3 +1,6 @@
+2009-07-06 nicolas
+* add memcached_plugin_interaction_workflow to update related Distributed Ram Cache Plugins
+
 2009-06-30 Danièle
 * Create Portal Type for Synchronisation Tool
 
